newsletter image overflow problem solved

--- a/styles/style.css
+++ b/styles/style.css
@@ -627,6 +627,11 @@ main {
 .newsletter-img {
   width: 60%;
 }
+.newsletter-img img {
+  width: 100%;
+  height: 100%;
+  /* object-fit: cover; */
+}
 .newsletter-form {
   border-radius: 16px;
   border: 2px solid #ff5400;
@@ -677,9 +682,9 @@ input[type="email"] {
   border-radius: 16px;
   text-align: center;
   position: absolute;
-  bottom: 65px;
+  bottom: 60px;
   transform: rotate(-30deg);
-  right: -7px;
+  right: 0px;
   background: #ff5400;
 }
 
